Scrollbar fix

--- a/src/pages/batiboot/modalStyle.scss
+++ b/src/pages/batiboot/modalStyle.scss
@@ -54,9 +54,9 @@
   padding: 0px;
   margin: 0px;
 
-  ::-webkit-scrollbar {
-    display: none;
-  }
+  // ::-webkit-scrollbar {
+  //   display: none;
+  // }
 
   .mpp-header {
     position: fixed;
